// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Component renders a disabled next button the last page 1`] = `
<div
  class="sc-bdVaJa bvvVRs"
>
  <button>
    Prev Page
  </button>
  <span>
    Page 
    100
  </span>
  <button
    disabled=""
  >
    Next Page
  </button>
</div>
`;

exports[`Pagination Component renders a disabled previous button the first page 1`] = `
<div
  class="sc-bdVaJa bvvVRs"
>
  <button
    disabled=""
  >
    Prev Page
  </button>
  <span>
    Page 
    1
  </span>
  <button>
    Next Page
  </button>
</div>
`;

exports[`Pagination Component renders an enabled previous button on pages greater than 1 1`] = `
<div
  class="sc-bdVaJa bvvVRs"
>
  <button>
    Prev Page
  </button>
  <span>
    Page 
    2
  </span>
  <button>
    Next Page
  </button>
</div>
`;
